Update all references and links to Tumblr

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Post to Tumblr from any Web Page</h1>
-    <button id="checkPage">Check this page now!</button>
+    <button id="checkPage">Post to Tumblr</button>
   </body>
 </html>
