--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
   <head>
+    <link rel = "stylesheet" href = "styles.css" type = "text/css" />
     <title>Tumblr-Chrome Extension</title>
     <script src="scripts.js"></script>
   </head>
   <body>
-    <h1>Post to Tumblr from any Web Page</h1>
-    <button id="checkPage">Post to Tumblr</button>
+    <h1>Post to Tumblr?</h1>
+    <button class="btn" id="checkPage">POST!</button>
   </body>
 </html>
