--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <link rel = "stylesheet" href = "styles.css" type = "text/css" />
     <title>Tumblr-Chrome Extension</title>
+    <link rel = "stylesheet" href = "styles.css" type = "text/css" />
+    <link href='http://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'> 
     <script src="scripts.js"></script>
   </head>
   <body>
