Update extension copy

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="scripts.js"></script>
   </head>
   <body>
-    <h1>Post to Tumblr?</h1>
-    <button class="btn" id="checkPage">POST!</button>
+    <h1>Open Tumblr?</h1>
+    <button class="btn" id="checkPage">Click Here</button>
   </body>
 </html>
