Remove question, just include button

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <script src="scripts.js"></script>
   </head>
   <body>
-    <h1>Open Tumblr?</h1>
-    <button class="btn" id="checkPage">Click Here</button>
+    <button class="btn" id="checkPage">Click here to open Tumblr.</button>
   </body>
 </html>
