Change btn classname to prevent css overwriting on chrome pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <script src="scripts.js"></script>
   </head>
   <body>
-    <button class="btn" id="checkPage">Click here to open Tumblr.</button>
+    <button class="btn-terri" id="checkPage">Click here to open Tumblr.</button>
   </body>
 </html>
