--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <title>Tumblr-Chrome Extension</title>
     <link rel = "stylesheet" href = "styles.css" type = "text/css" />
-    <link href='http://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'> 
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'> 
     <script src="scripts.js"></script>
   </head>
   <body>
-    <button class="btn-terri" id="checkPage">Click here to open Tumblr.</button>
+    <button class="btn-terri" id="checkPage">Open Tumblr</button>
   </body>
 </html>
